--- a/app/src/main/res/layout/activity_display_articles.xml
+++ b/app/src/main/res/layout/activity_display_articles.xml
@@ -14,14 +14,26 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="10dp"
+        android:textSize="30dp"
+        android:textColor="#000000"
         android:id="@+id/displaytitle"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
-        android:textSize="8dp"
+        android:textSize="15dp"
+        android:textColor="#000000"
         android:id="@+id/displaycontent"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:text="Go To Source"
+        android:id="@+id/webButton"/>
+    <WebView
+        android:id="@+id/webView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 
 
