--- a/app/src/main/res/layout/activity_display_articles.xml
+++ b/app/src/main/res/layout/activity_display_articles.xml
@@ -18,7 +18,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30dp"
+        android:textSize="25dp"
         android:layout_marginTop="10dp"
         android:padding="10dp"
         android:textColor="#000000"
@@ -36,6 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
+        android:layout_marginTop="20dp"
         android:text="Go To Source"
         android:id="@+id/webButton"
         android:padding="10dp"
