--- a/app/src/main/res/layout/activity_offline_news.xml
+++ b/app/src/main/res/layout/activity_offline_news.xml
@@ -14,11 +14,17 @@
         android:layout_gravity="center"
         />
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/refreshOffline">
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_viewOffline"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
         android:scrollbars="vertical"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </android.support.constraint.ConstraintLayout>
